[package]
name = "ft"
version = "0.1.0"
authors = ["Nils Mahtieu <nmathieu@student.42.fr>"]
edition = "2021"
description = "My personal library for 42 school projects."

[features]
default = [
    "global-allocator",
    "panic-handler",
    "panic-eh-personality",
    "collections",
    "alloc",
]

panic-handler = []
panic-eh-personality = []
global-allocator = []
collections = []
alloc = []

restrict-functions = []
restrict-errno = []

[dependencies]
libc = { version = "0.2", default-features = false }
bitflags = "2"
